<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".OrderDetailsActivity">

    <TextView
        android:id="@+id/textViewOrderTitle"
        android:layout_width="253dp"
        android:layout_height="37dp"
        android:background="@color/white"
        android:text="@string/order_details"
        android:textAlignment="center"
        style="@style/title_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="309dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/type_product_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderTitle" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="309dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/type_price_per_unit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />


    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="309dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/type_quantity"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/button_color"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="302dp"
        android:layout_height="134dp"
        android:background="@color/white"
        android:text=""
        android:gravity="center_vertical|start"
        android:paddingStart="@dimen/output"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>